Refactor test plugin dependencies to allow dependabot to manage them